=======
CHANGES
=======

------
0.10.1
------

Added find/replace dialog
Moved redundant options from 3D panel
Can now plot 3D using check button
Grouped scatter plots in 3D
Removed redundant data in saving of plot options in projects
Recent project items in menu

------
0.10.0
------

Fix to dropping index when no name
Added dotplot
Added axis tick and tick label format options
Added plotting animation dialog
Added ability to label points in scatter plots using a column
Added ability to set point sizes with data column
Fix to plot frame closing bug
Added empty column selection for groupby option
Fixes to copy/paste and saving projects in snap
Long column names now wrapped in plots
Can now wrap column header text
Fix to column resizing

------
0.9.0
------

Row/col options for sample data
Fixed scrolling up/down and right/left for arrow keys
Re-did aggregate dialog to be more general
Resample/transform functions for columns
Added find duplicates dialog
Zoom in/out functions to view menu
Improved grid layout dialog
Ability to auto create multiviews/split data in grid
Removed TkAgg toolbar (deprecated)
Fixed bug for slow row selection in large tables
Fixed slow loading of large tables

------
0.8.3
------

Index header fixes
Cell color by mask added
Set color by value added
Can now set per column alignment
Snap now works
Fix to deleterows
Added move/copy column to menu
Can open excel files from cmd line
More options for heatmap

------
0.8.2
------

Fixed setup.py error that stopped pip install
Added column coloring functionality
Fixed slow adding of multiple rows
Fix to display row numbers properly for large tables

------
0.8.1
------

Added table operations to main menu
Added time series resample (table menu)
Can now undo last change for most operations
Differential expression plugin
Element-wise transform menu item
Added aggfunc to pivot dialog
Filtering tool highlights filtered rows by default
Added predefined widget filters to filtering dialog