@@ -12,6 +12,7 @@ Can now plot 3D using check button
 Grouped scatter plots in 3D
 Removed redundant data in saving of plot options in projects
 Recent project items in menu
+Dropdown entry menu for categorical columns
 
 ------
 0.10.0
